# ComfyUI-IP-Composer

./: LICENSE  README.md  nodes.py  pyproject.toml  requirements.txt
example_workflows/: ip-composer-concept-descriptions.json  ip-composer-create-concept.json  ip-composer-single-concept.json
