[project]
name = "comfyui-ip-composer"
description = "ComfyUI wrapper of IP-Composer"
version = "0.1.1"
license = { text = "MIT License" }
dependencies = ["open-clip-torch"]

[project.urls]
Repository = "https://github.com/godmt/ComfyUI-IP-Composer"

[tool.comfy]
PublisherId = "godmt"
DisplayName = "ComfyUI-IP-Composer"
Icon = ""
